--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
 @import url('https://rsms.me/inter/inter.css');
-@import url('https://fonts.googleapis.com/css2?family=Calistoga&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -7,7 +6,7 @@
 }
 body {
   line-height: 1.8;
-  font-family: 'Inter',   Helvetica, Arial, sans-serif
+  font-family: 'Inter', sans-serif;
 }
 section {
   max-width: 800px;
